# TongJi_webots

./: .gitignore  README.md  SYSTEM_README.md  bot_scale.py  fast_build_ros.sh  package-lock.json  sim_with_driver.launch.py  start_ros_bridge.sh  start_system.sh  stop_system.sh  test_api_connection.sh  test_map_optimization.sh
docs/: nav2的Costmap配置方法.md
project-docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md  SDS.md  SRS.md  TEST_PLAN.md  USER_MANUAL.md  开发指南.md  文档修改总结.md  核心功能测试设计.md  用户手册.md  系统功能结构总览.md  系统架构.md
project-docs/appendix/: glossary.md  reference.md
project-docs/diagrams/: api_flowchart.md  data_flow.md  deployment_architecture.md  robot_modules.md  system_architecture.drawio
robot-delivery-system/: .env  EMBEDDED_MAP_GUIDE.md  EMBEDDED_MAP_UPDATE.md  MAP_README.md  MAP_VIEW_OPTIMIZATION.md  README.md  ROS_ONLY_MAP_TEST.md  package-lock.json  package.json  vite.config.ts
robot-delivery-system/src/: App.vue
robot-delivery-system/src/assets/: main.css
robot-delivery-system/src/components/: AuthenticationModal.vue  ConnectionStatus.vue  EmbeddedMapViewer.vue  LockerStatusPanel.vue  RealTimeMapViewer.vue  RobotTaskQueue.vue  SimulatedMapViewer.vue  UserAuthModal.vue  VoiceRecorder.vue
robot-delivery-system/src/router/: index.ts
robot-delivery-system/src/services/: api.ts  authApiService.ts  authService.ts  authService.ts.backup  index.ts  locationApiService.ts  lockerApiService.ts  mapService.ts  nameMapService.ts  pickupApiService.ts  robotService.ts  rosConnection.ts  simulatedMap.ts  systemStatusService.ts  taskApiService.ts  taskService.ts  userApiService.ts  voiceService.ts
robot-delivery-system/src/stores/: robot.ts  user.ts
robot-delivery-system/src/types/: roslib.d.ts
robot-delivery-system/src/views/: ApiTestView.vue  CallRobot.vue  MainDashboard.vue  MapDashboard.vue  ReceivePackage.vue  SendPackage.vue
ros2_ws/: frames_2025-05-09_16.41.44.gv  frames_2025-05-10_13.55.06.gv  frames_2025-05-12_13.01.05.gv  frames_2025-06-02_16.24.48.gv  frames_2025-06-02_16.34.53.gv  frames_2025-06-07_18.35.50.gv
ros2_ws/src/auto_explorer/: CMakeLists.txt  package.xml
ros2_ws/src/auto_explorer/auto_explorer/: auto_explorer.py  semantic_nav.py
ros2_ws/src/auto_explorer/config/: slam_toolbox_online_async.yaml  webots_cartographer.lua
ros2_ws/src/auto_explorer/launch/: auto_explorer.launch.py  cartographer.launch.py  semantic_nav.launch.py
ros2_ws/src/auto_explorer/map/: map.json  my_office_map.pgm  my_office_map.yaml  my_office_map_2.pgm  my_office_map_2.yaml
ros2_ws/src/multi_goal_planner/: CMakeLists.txt  package.xml
ros2_ws/src/multi_goal_planner/launch/: optimized_multi_nav.launch.py
ros2_ws/src/multi_goal_planner/multi_goal_planner/: __init__.py  optimized_multi_nav.py
ros2_ws/src/navigation2/nav2_bringup/params/: nav2_params.yaml
ros2_ws/src/ros2_bridge/: CMakeLists.txt  README.md  package.xml  start_bridge.sh
ros2_ws/src/ros2_bridge/launch/: nav_bridge_custom.launch.py  ros2_bridge.launch.py
ros2_ws/src/ros2_bridge/ros2_bridge/: __init__.py  nav_result_bridge.py  publish_msg.py
ros2_ws/src/slam_nav/config/: slam_toolbox_online_async.yaml
ros2_ws/src/tongji_webot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/tongji_webot_bringup/launch/: sim_with_driver.launch.py  start_nav.launch.py
ros2_ws/src/tongji_webot_bringup/resource/: TurtleBot3Burger.urdf  turtlebot.urdf
ros2_ws/src/tongji_webot_bringup/scripts/: auto_initial_pose.py  auto_mapping.launch.py  random_explorer.py
ros2_ws/src/tongji_webot_bringup/src/: clock_publisher.cpp
ros2_ws/src/tongji_webot_bringup/worlds/: .office_simple.wbproj  office_simple.wbt
secure_robot_api/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  ENHANCED_SCHEDULING_GUIDE.md  OFFLINE_LLM_GUIDE.md  README.md  VOICE_GUIDE.md  main.py  models.py  pytest.ini  requirements.txt  requirements_voice.txt  setup_offline_llm.sh  setup_vosk.sh  start_voice_system.sh
secure_robot_api/api/: auth_api.py  location_api.py  locker_api.py  pickup_api.py  robot_queue.py  task_api.py  user_api.py  voice_api.py
secure_robot_api/schema/: schema_reference.json
secure_robot_api/scripts/: generate_locations.py  generate_lockers.py  generate_logs.py  generate_tasks.py  generate_users.py
secure_robot_api/services/: auth_service.py  log_service.py  offline_llm_service.py  pickup_service.py  schema_service.py  task_service.py  voice_service.py
secure_robot_api/storage/: locations.json  lockers.json  logs.json  tasks.json  users.json
secure_robot_api/tests/: auth_api_test.py  conftest.py  log_test.py  pickup_api_test.py  task_api_test.py  test_offline_llm.py  test_voice_llm.py
test_webot/worlds/: .break_room.wbproj  .complete_apartment.wbproj  .test_world.wbproj  break_room.wbt  complete_apartment.wbt  test_world.wbt
tongji_webot_project/bringup/: package.xml
tongji_webot_project/bringup/launch/: sim_with_driver.launch.py
tongji_webot_project/bringup/resource/: ros2control.yml
tongji_webot_project/bringup/worlds/: .office_simple.wbproj  office_simple.wbt
tongji_webot_project/protos/: RobotisLds01.proto  RoundTable.proto  TurtleBot3Burger.proto  TurtleBot3Burger_scaled.proto  VelodyneHDL-64E.proto
tongji_webot_project/worlds/: .break_room.wbproj  .new world.wbproj  .office_simple.wbproj  break_room.wbt  office_simple.wbt
