<?xml version="1.0"?>
<package format="3">
  <name>auto_explorer</name>
  <version>0.0.1</version>
  <description>Python-based autonomous explorer for Webots + ROS 2 SLAM</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
